// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component categories-page <Card /> Category completed: > 0 and < 10 questions (quiz in progress) should render Card 1`] = `
<DocumentFragment>
  <div
    aria-label="Books start quiz"
    class="sc-bdfBwQ sc-dlfnbm cXyUsK haOKjT"
    data-readonly="true"
    data-testid="category-card"
    role="div"
    tabindex="-1"
  >
    <div
      class="sc-eCssSg caVUlX"
    >
      <div
        aria-label=" questions answered"
        class="sc-jSgupP eMsPRm progress-bar"
        data-testid="progress-bar"
      >
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
        <span
          class="sc-gKsewC eDsWGz  "
          data-testid=" "
        />
      </div>
      <span
        aria-label="continue Books quiz ( questions answered)"
        class="category-card__link"
        role="button"
        tabindex="0"
      >
        continue
      </span>
    </div>
    <h2
      class="sc-hKgILt juEGes"
    >
      Books
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Component categories-page <Card /> Category completed: 0 questions (quiz not started) should render Card 1`] = `
<DocumentFragment>
  <div
    aria-label="Books start quiz"
    class="sc-bdfBwQ sc-dlfnbm cXyUsK cpFaeN"
    data-readonly="false"
    data-testid="category-card"
    role="button"
    tabindex="0"
  >
    <h2
      class="sc-hKgILt juEGes"
    >
      Books
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Component categories-page <Card /> Category completed: 10 questions (finished quiz) should render Card 1`] = `
<DocumentFragment>
  <div
    aria-label="Books start quiz"
    class="sc-bdfBwQ sc-dlfnbm cXyUsK haOKjT"
    data-readonly="true"
    data-testid="category-card"
    role="div"
    tabindex="-1"
  >
    <div
      class="sc-eCssSg caVUlX"
    >
      <div
        data-testid="card-header-results"
      >
        /
      </div>
      <span
        aria-label="see report for Books (quiz completed)"
        class="category-card__link"
        role="button"
        tabindex="0"
      >
        see report
      </span>
    </div>
    <h2
      class="sc-hKgILt juEGes"
    >
      Books
    </h2>
  </div>
</DocumentFragment>
`;
